issues list is built and displays well on mobile and desktop

--- a/src/Components/IssueList/IssueList-Item.module.less
+++ b/src/Components/IssueList/IssueList-Item.module.less
@@ -14,6 +14,10 @@
 
   }
 
+  div{
+    // border: 1px solid red;
+  }
+
   p{
     padding: 0.5rem;
     margin: 0;
@@ -21,12 +25,12 @@
   }
 
   button {
-    margin: 0 0.5rem;
     background-color: @warning;
   }
 
-  svg{
-    margin: 0 0.5rem;
+  i{
+    display: block;
+    margin: 0 auto;
     color: @danger;
   }
 
@@ -43,9 +47,4 @@
       text-align: left;
       color: rgba(0,0,0,0.65);
   }
-}
-
-.issues--item--second-col{
-
-  
 }
